--- a/index.html
+++ b/index.html
@@ -434,9 +434,13 @@
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5"><strong>Low Fare Calendar
 </strong><div><strong>The Best Airfares For A Year Ahead</strong></div></h3>
 
-   <script src="https://www.travelpayouts.com/calendar_widget/iframe.js?destination=BKK&marker=278762&searchUrl=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&one_way=true&only_direct=true&period=year&range=7%2C14" charset="utf-8"></script>        
+   <script src="https://www.travelpayouts.com/calendar_widget/iframe.js?destination=BKK&marker=278762.australia&searchUrl=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=true&one_way=false&only_direct=false&period=year&range=7%2C14" charset="utf-8"></script>
+		  
 
-		   </div>
+
+
+
+		  </div>
         </div>
     </div>
 
@@ -483,9 +487,10 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-5">Best Flight Deals</h2>
 
 
-<script src="https://www.travelpayouts.com/ducklett/scripts_en.js?v=1&marker=278762&widget_type=brickwork&host=search.jetradar.com&locale=en&currency=usd&limit=8&powered_by=false" charset="utf-8"></script>
-
+<script src="https://www.travelpayouts.com/ducklett/scripts_en.js?v=1&marker=278762&widget_type=brickwork&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&limit=20&powered_by=true" charset="utf-8"></script>
             
+			
+			
 			</div>
         </div>
     </div>
@@ -508,7 +513,7 @@
                <div class="item-wrapper">
 
 
-<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=NYC" charset="utf-8"></script>                </div>
+<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=NYC" charset="utf-8"></script>                </div>
 
 
 
@@ -517,7 +522,7 @@
                 <div class="item-wrapper">
 
 
-<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=SYD" charset="utf-8"></script>
+<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=SYD" charset="utf-8"></script>
 
 
                 </div>
@@ -527,7 +532,7 @@
 
 
 
-<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false" charset="utf-8"></script>                </div>
+<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false" charset="utf-8"></script>                </div>
 
 
             </div>
@@ -535,7 +540,7 @@
                 <div class="item-wrapper">
 
 
-<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=LON" charset="utf-8"></script>
+<script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=LON" charset="utf-8"></script>
 
                 </div>
             </div>
@@ -557,22 +562,22 @@
         <div class="row mbr-gallery" data-toggle="modal" data-target="#rXTZ1Cc3pb">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=BKK" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=BKK" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=GOI" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=GOI" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=PAR" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=PAR" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=SIN" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=SIN" charset="utf-8"></script>
                 </div>
             </div>
         </div>
@@ -593,22 +598,22 @@
         <div class="row mbr-gallery" data-toggle="modal" data-target="#rXTZ1Cc3pb">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=MAN" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=MAN" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=DUB" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=DUB" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=LAS" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=LAS" charset="utf-8"></script>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=usd&powered_by=false&destination=DXB" charset="utf-8"></script>
+                    <script src="https://www.travelpayouts.com/weedle/widget.js?v=1&marker=278762&host=flight.trippyowl.com%2Fflights&locale=en&currency=aud&powered_by=false&destination=DXB" charset="utf-8"></script>
                 </div>
             </div>
         </div>
@@ -746,7 +751,7 @@
 
 
 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href=" https://hotel.trippyowl.com " onclick="window.open(' http://search.trippyowl.com '); return true;">EXPLORE MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href=" https://hotels.trippyowl.com " onclick="window.open(' http://flights.trippyowl.com '); return true;">EXPLORE MORE</a></div>
             </div>
         </div>
     </div>
@@ -823,7 +828,7 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-5">International Airport Transfers</h1>
 
-<script src="https://c1.travelpayouts.com/content?promo_id=3879&shmarker=278762&locale=en&currency=USD&from=&to=&height=&transfer_options_limit=10&transfer_options=MCR&disable_currency_selector=false&hide_form_extras=false&hide_external_links=true&powered_by=false" charset="utf-8" async="true"></script>
+<script src="https://c1.travelpayouts.com/content?promo_id=3879&shmarker=278762&locale=en&currency=aud&from=&to=&height=&transfer_options_limit=10&transfer_options=MCR&disable_currency_selector=false&hide_form_extras=false&hide_external_links=true&powered_by=false" charset="utf-8" async="true"></script>
 
             </div>
         </div>
