--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019-20 TRIPPYOWL.COM - All Rights Reserved <br><a href="http://amp.trippyowl.com/" target="_blank"><strong>LIGHT VERSION</strong></a><br></p>
+                    © Copyright 2019-20 TRIPPYOWL.COM - All Rights Reserved <br><a href="http://amp.trippyowl.com/australia.html" target="_blank"><strong>LIGHT VERSION</strong></a><br></p>
             </div>
         </div>
     </div>
